Performance Tests Laba-6

--- a/Lab_6/usersimulation-20211212201743270/req_post-new-post-e7f4c.html
+++ b/Lab_6/usersimulation-20211212201743270/req_post-new-post-e7f4c.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="js/highcharts-more.js"></script>
 <script type="text/javascript" src="js/theme.js"></script>
 <script type="text/javascript" src="js/unpack.js"></script>
-<title>Gatling Stats - Get Post</title>
+<title>Gatling Stats - Post new Post</title>
 </head>
 <body>
 <div class="frise"></div>
@@ -37,15 +37,15 @@
                         <div class="item "><a href="index.html">GLOBAL</a></div>
                         <div class="item ouvert"><a id="details_link" href="#">DETAILS</a></div>
                         <script type="text/javascript">
-                          var timestamp = 1639337922554;
+                          var timestamp = 1639340263270;
                           var runStartHumanDate = moment(timestamp).format("YYYY-MM-DD HH:mm:ss Z");
-                          document.writeln("<p class='sim_desc' title='"+ runStartHumanDate +", duration : 29 seconds' data-content='Tests'>");
-                          document.writeln("<b>" + runStartHumanDate + ", duration : 29 seconds Tests</b>");
+                          document.writeln("<p class='sim_desc' title='"+ runStartHumanDate +", duration : 34 seconds' data-content=''>");
+                          document.writeln("<b>" + runStartHumanDate + ", duration : 34 seconds </b>");
                           document.writeln("</p>");
                         </script>
                     </div>
                     <div class="content-in">
-                        <h1><span>> </span>Get Post</h1>
+                        <h1><span>> </span>Post new Post</h1>
                         <div class="article">
                             
                         <div class="infos">
@@ -174,7 +174,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    var pageStats = stats.contents['req_get-post-b22d0'].stats;
+    var pageStats = stats.contents['req_post-new-post-e7f4c'].stats;
     $(document).ready(function() {
         $('.sim_desc').popover({trigger:'hover', placement:'bottom'});
         setDetailsLinkUrl();
@@ -303,7 +303,7 @@ var responseTimeDistributionChart = new Highcharts.Chart({
     text: 'A title to let highcharts reserve the place for the title set later'
   },
   xAxis: {
-    categories: ['14', '17', '19', '22', '24', '27', '29', '31', '34', '36', '39', '41', '44', '46', '49', '51', '54', '56', '59', '61', '63', '66', '68', '71', '73', '76', '78', '81', '83', '86', '88', '90', '93', '95', '98', '100', '103', '105', '108', '110', '113', '115', '118', '120', '122', '125', '127', '130', '132', '135', '137', '140', '142', '145', '147', '150', '152', '154', '157', '159', '162', '164', '167', '169', '172', '174', '177', '179', '182', '184', '186', '189', '191', '194', '196', '199', '201', '204', '206', '209', '211', '213', '216', '218', '221', '223', '226', '228', '231', '233', '236', '238', '241', '243', '245', '248', '250', '253', '255', '258'],
+    categories: ['332', '489', '646', '803', '960', '1117', '1274', '1431', '1588', '1745', '1902', '2059', '2216', '2373', '2530', '2687', '2844', '3001', '3158', '3315', '3472', '3629', '3786', '3943', '4100', '4257', '4414', '4571', '4728', '4885', '5042', '5199', '5356', '5513', '5670', '5827', '5984', '6141', '6298', '6455', '6612', '6769', '6926', '7083', '7240', '7397', '7554', '7711', '7868', '8025', '8183', '8340', '8497', '8654', '8811', '8968', '9125', '9282', '9439', '9596', '9753', '9910', '10067', '10224', '10381', '10538', '10695', '10852', '11009', '11166', '11323', '11480', '11637', '11794', '11951', '12108', '12265', '12422', '12579', '12736', '12893', '13050', '13207', '13364', '13521', '13678', '13835', '13992', '14149', '14306', '14463', '14620', '14777', '14934', '15091', '15248', '15405', '15562', '15719', '15876'],
     tickInterval: 20
   },
   yAxis: {
@@ -332,7 +332,7 @@ type: 'column',
 color: '#4572A7',
 name: 'OK',
 data: [
-  6.66,0.0,20.0,0.0,0.0,6.66,6.66,0.0,0.0,0.0,0.0,0.0,0.0,13.33,6.66,20.0,0.0,0.0,0.0,0.0,6.66,6.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,6.66
+  98.9,0.0,0.36,0.18,0.0,0.0,0.18,0.18,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.18
 ],
 tooltip: { yDecimals: 0, ySuffix: 'ms' }
 },
@@ -353,7 +353,7 @@ responseTimeDistributionChart.setTitle({
   useHTML: true
 });
 
-var responseTimePercentiles = unpack([[1639337923,[50,50,50,50,50,50,50,50,50,50]],[1639337924,null],[1639337925,[259,259,259,259,259,259,259,259,259,259]],[1639337926,null],[1639337927,[65,65,65,65,65,65,65,65,65,65]],[1639337928,null],[1639337929,[27,27,27,27,27,27,27,27,27,27]],[1639337930,null],[1639337931,[18,18,18,18,18,18,18,18,18,18]],[1639337932,null],[1639337933,[47,47,47,47,47,47,47,47,47,47]],[1639337934,null],[1639337935,[19,19,19,19,19,19,19,19,19,19]],[1639337936,null],[1639337937,[20,20,20,20,20,20,20,20,20,20]],[1639337938,null],[1639337939,[13,13,13,13,13,13,13,13,13,13]],[1639337940,null],[1639337941,[28,28,28,28,28,28,28,28,28,28]],[1639337942,null],[1639337943,[45,45,45,45,45,45,45,45,45,45]],[1639337944,null],[1639337945,[48,48,48,48,48,48,48,48,48,48]],[1639337946,null],[1639337947,[63,63,63,63,63,63,63,63,63,63]],[1639337948,null],[1639337949,[52,52,52,52,52,52,52,52,52,52]],[1639337950,null],[1639337951,[51,51,51,51,51,51,51,51,51,51]]]);
+var responseTimePercentiles = unpack([[1639340264,[274,294,325,351,351,351,351,352,353,354]],[1639340265,[260,287,313,332,336,337,338,341,347,349]],[1639340266,[266,305,318,328,332,336,338,339,346,348]],[1639340267,[258,277,301,321,323,329,334,336,336,336]],[1639340268,[259,265,275,308,316,319,323,342,392,405]],[1639340269,[258,265,279,293,296,303,310,312,316,318]],[1639340270,[260,267,284,332,337,339,344,377,570,619]],[1639340271,[258,269,283,311,318,323,325,329,336,338]],[1639340272,[261,270,288,313,320,323,327,333,337,339]],[1639340273,[261,266,278,322,324,327,341,361,381,386]],[1639340274,[259,268,308,318,319,319,322,327,331,333]],[1639340275,[258,269,313,326,334,339,342,347,352,354]],[1639340276,[259,267,274,315,321,326,328,331,340,343]],[1639340277,[257,268,275,317,317,319,322,327,338,341]],[1639340278,[261,269,308,315,319,324,329,336,347,350]],[1639340279,[255,263,309,313,318,328,339,363,369,371]],[1639340280,[260,268,301,324,326,329,341,421,681,746]],[1639340281,[266,271,282,308,313,319,330,347,350,351]],[1639340282,[256,270,294,328,332,341,538,2750,13314,15955]],[1639340283,[261,285,317,333,336,338,339,340,340,340]],[1639340284,[260,271,275,303,313,321,333,502,1226,1408]],[1639340285,[259,268,282,317,319,322,325,328,330,331]],[1639340286,[264,284,309,330,331,337,352,378,387,390]],[1639340287,[255,269,302,321,323,325,335,356,369,373]],[1639340288,[258,267,298,322,327,335,344,374,563,611]],[1639340289,[257,269,306,321,322,327,332,334,334,335]],[1639340290,[259,269,280,315,318,319,320,321,325,327]],[1639340291,[261,296,318,325,330,338,339,341,342,343]],[1639340292,[260,270,309,329,332,336,341,348,359,362]],[1639340293,[253,265,294,323,326,328,330,330,330,331]],[1639340294,[253,283,303,305,305,305,305,305,305,305]],[1639340295,null],[1639340296,null],[1639340297,null],[1639340298,null]]);
 
 var responseTimeChart = new Highcharts.StockChart({
   chart: {
@@ -548,7 +548,7 @@ responseTimeChart.setTitle({
   useHTML: true
 });
 
-var container_requests = unpack([[1639337923,[1,0, 1]],[1639337924,[0,0, 0]],[1639337925,[1,0, 1]],[1639337926,[0,0, 0]],[1639337927,[1,0, 1]],[1639337928,[0,0, 0]],[1639337929,[1,0, 1]],[1639337930,[0,0, 0]],[1639337931,[1,0, 1]],[1639337932,[0,0, 0]],[1639337933,[1,0, 1]],[1639337934,[0,0, 0]],[1639337935,[1,0, 1]],[1639337936,[0,0, 0]],[1639337937,[1,0, 1]],[1639337938,[0,0, 0]],[1639337939,[1,0, 1]],[1639337940,[0,0, 0]],[1639337941,[1,0, 1]],[1639337942,[0,0, 0]],[1639337943,[1,0, 1]],[1639337944,[0,0, 0]],[1639337945,[1,0, 1]],[1639337946,[0,0, 0]],[1639337947,[1,0, 1]],[1639337948,[0,0, 0]],[1639337949,[1,0, 1]],[1639337950,[0,0, 0]],[1639337951,[1,0, 1]]]);
+var container_requests = unpack([[1639340264,[12,0, 12]],[1639340265,[18,0, 18]],[1639340266,[18,0, 18]],[1639340267,[19,0, 19]],[1639340268,[18,0, 18]],[1639340269,[18,0, 18]],[1639340270,[19,0, 19]],[1639340271,[18,0, 18]],[1639340272,[18,0, 18]],[1639340273,[19,0, 19]],[1639340274,[18,0, 18]],[1639340275,[18,0, 18]],[1639340276,[19,0, 19]],[1639340277,[18,0, 18]],[1639340278,[18,0, 18]],[1639340279,[19,0, 19]],[1639340280,[18,0, 18]],[1639340281,[18,0, 18]],[1639340282,[19,0, 19]],[1639340283,[18,0, 18]],[1639340284,[18,0, 18]],[1639340285,[19,0, 19]],[1639340286,[18,0, 18]],[1639340287,[18,0, 18]],[1639340288,[19,0, 19]],[1639340289,[18,0, 18]],[1639340290,[18,0, 18]],[1639340291,[19,0, 19]],[1639340292,[18,0, 18]],[1639340293,[18,0, 18]],[1639340294,[7,0, 7]],[1639340295,[0,0, 0]],[1639340296,[0,0, 0]],[1639340297,[0,0, 0]],[1639340298,[0,0, 0]]]);
 
 var requestsChart = new Highcharts.StockChart({
   chart: {
@@ -657,7 +657,7 @@ requestsChart.setTitle({
   useHTML: true
 });
 
-var container_responses = unpack([[1639337923,[1,0, 1]],[1639337924,[0,0, 0]],[1639337925,[0,0, 0]],[1639337926,[1,0, 1]],[1639337927,[1,0, 1]],[1639337928,[0,0, 0]],[1639337929,[1,0, 1]],[1639337930,[0,0, 0]],[1639337931,[1,0, 1]],[1639337932,[0,0, 0]],[1639337933,[1,0, 1]],[1639337934,[0,0, 0]],[1639337935,[1,0, 1]],[1639337936,[0,0, 0]],[1639337937,[1,0, 1]],[1639337938,[0,0, 0]],[1639337939,[1,0, 1]],[1639337940,[0,0, 0]],[1639337941,[1,0, 1]],[1639337942,[0,0, 0]],[1639337943,[1,0, 1]],[1639337944,[0,0, 0]],[1639337945,[1,0, 1]],[1639337946,[0,0, 0]],[1639337947,[1,0, 1]],[1639337948,[0,0, 0]],[1639337949,[1,0, 1]],[1639337950,[0,0, 0]],[1639337951,[1,0, 1]]]);
+var container_responses = unpack([[1639340264,[4,0, 4]],[1639340265,[20,0, 20]],[1639340266,[18,0, 18]],[1639340267,[19,0, 19]],[1639340268,[19,0, 19]],[1639340269,[18,0, 18]],[1639340270,[17,0, 17]],[1639340271,[20,0, 20]],[1639340272,[18,0, 18]],[1639340273,[16,0, 16]],[1639340274,[21,0, 21]],[1639340275,[17,0, 17]],[1639340276,[18,0, 18]],[1639340277,[20,0, 20]],[1639340278,[17,0, 17]],[1639340279,[20,0, 20]],[1639340280,[17,0, 17]],[1639340281,[20,0, 20]],[1639340282,[15,0, 15]],[1639340283,[20,0, 20]],[1639340284,[18,0, 18]],[1639340285,[17,0, 17]],[1639340286,[19,0, 19]],[1639340287,[19,0, 19]],[1639340288,[16,0, 16]],[1639340289,[22,0, 22]],[1639340290,[16,0, 16]],[1639340291,[18,0, 18]],[1639340292,[19,0, 19]],[1639340293,[19,0, 19]],[1639340294,[12,0, 12]],[1639340295,[0,0, 0]],[1639340296,[0,0, 0]],[1639340297,[0,0, 0]],[1639340298,[1,0, 1]]]);
 
 var requestsChart = new Highcharts.StockChart({
   chart: {
@@ -775,7 +775,7 @@ tooltip: { yDecimals: 0, ySuffix: '', valueDecimals: 0 }
 type: 'pie',
 name: 'Distribution',
 data: [
-  {name: 'OK', y: 15.0, color: '#A0B228'},{name: 'KO', y: 0.0, color: '#FF0000'}
+  {name: 'OK', y: 550.0, color: '#A0B228'},{name: 'KO', y: 0.0, color: '#FF0000'}
 ],
 center: [775, -40],
 size: 70,
@@ -860,7 +860,7 @@ type: 'scatter',
 color: 'rgba(69, 114, 167, .2)',
 name: 'OK',
 data: [
-[7,50],[7,259],[7,65],[7,27],[7,18],[7,47],[7,19],[7,20],[7,13],[7,28],[7,45],[7,48],[7,63],[7,52],[7,51]
+[15,352],[17,305],[31,321],[32,361],[32,336],[32,421],[32,374],[32,348],[33,339],[33,342],[33,312],[33,377],[33,333],[33,347],[33,2750],[33,340],[33,502],[33,328],[33,378],[34,341],[34,329],[34,327],[34,331],[34,327],[34,347],[34,356],[34,341],[35,336],[35,363],[35,330],[36,334]
 ]},
 	  {
 type: 'scatter',
