--- a/Lab_6/usersimulation-20211212201743270/req_put-post-f3d99.html
+++ b/Lab_6/usersimulation-20211212201743270/req_put-post-f3d99.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="js/highcharts-more.js"></script>
 <script type="text/javascript" src="js/theme.js"></script>
 <script type="text/javascript" src="js/unpack.js"></script>
-<title>Gatling Stats - Delete Post</title>
+<title>Gatling Stats - Put Post</title>
 </head>
 <body>
 <div class="frise"></div>
@@ -37,15 +37,15 @@
                         <div class="item "><a href="index.html">GLOBAL</a></div>
                         <div class="item ouvert"><a id="details_link" href="#">DETAILS</a></div>
                         <script type="text/javascript">
-                          var timestamp = 1639337922554;
+                          var timestamp = 1639340263270;
                           var runStartHumanDate = moment(timestamp).format("YYYY-MM-DD HH:mm:ss Z");
-                          document.writeln("<p class='sim_desc' title='"+ runStartHumanDate +", duration : 29 seconds' data-content='Tests'>");
-                          document.writeln("<b>" + runStartHumanDate + ", duration : 29 seconds Tests</b>");
+                          document.writeln("<p class='sim_desc' title='"+ runStartHumanDate +", duration : 34 seconds' data-content=''>");
+                          document.writeln("<b>" + runStartHumanDate + ", duration : 34 seconds </b>");
                           document.writeln("</p>");
                         </script>
                     </div>
                     <div class="content-in">
-                        <h1><span>> </span>Delete Post</h1>
+                        <h1><span>> </span>Put Post</h1>
                         <div class="article">
                             
                         <div class="infos">
@@ -174,7 +174,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    var pageStats = stats.contents['req_delete-post-2e304'].stats;
+    var pageStats = stats.contents['req_put-post-f3d99'].stats;
     $(document).ready(function() {
         $('.sim_desc').popover({trigger:'hover', placement:'bottom'});
         setDetailsLinkUrl();
@@ -303,7 +303,7 @@ var responseTimeDistributionChart = new Highcharts.Chart({
     text: 'A title to let highcharts reserve the place for the title set later'
   },
   xAxis: {
-    categories: ['223', '224', '225', '226', '227', '228', '229', '230', '231', '232', '233', '234', '235', '236', '237', '238', '239', '241', '242', '243', '244', '245', '246', '247', '248', '249', '250', '251', '252', '253', '254', '255', '256', '258', '259', '260', '261', '262', '263', '264', '265', '266', '267', '268', '269', '270', '271', '272', '273', '274', '276', '277', '278', '279', '280', '281', '282', '283', '284', '285', '286', '287', '288', '289', '290', '291', '292', '294', '295', '296', '297', '298', '299', '300', '301', '302', '303', '304', '305', '306', '307', '308', '309', '311', '312', '313', '314', '315', '316', '317', '318', '319', '320', '321', '322', '323', '324', '325', '326', '327'],
+    categories: ['218', '219', '221', '222', '223', '224', '225', '226', '227', '228', '230', '231', '232', '233', '235', '236', '237', '238', '239', '240', '241', '242', '243', '244', '245', '246', '247', '248', '249', '250', '251', '252', '253', '254', '255', '256', '257', '258', '259', '260', '261', '262', '264', '265', '266', '267', '269', '270', '273', '274', '279', '286', '294'],
     tickInterval: 20
   },
   yAxis: {
@@ -332,7 +332,7 @@ type: 'column',
 color: '#4572A7',
 name: 'OK',
 data: [
-  6.66,0.0,0.0,0.0,13.33,0.0,0.0,0.0,6.66,0.0,0.0,0.0,0.0,0.0,6.66,0.0,6.66,0.0,0.0,6.66,0.0,0.0,0.0,0.0,0.0,13.33,0.0,0.0,6.66,6.66,0.0,6.66,0.0,0.0,6.66,6.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,6.66
+  0.66,0.66,2.0,1.33,0.66,0.66,5.33,1.33,2.0,1.33,2.0,3.33,0.66,3.33,1.33,0.66,0.66,2.0,1.33,4.66,2.0,0.66,0.66,0.66,0.66,2.0,0.66,2.0,1.33,4.66,2.66,3.33,4.0,4.66,4.66,2.66,2.66,2.66,2.66,6.0,1.33,1.33,1.33,1.33,1.33,0.66,0.66,0.66,1.33,0.66,0.66,0.66,0.66
 ],
 tooltip: { yDecimals: 0, ySuffix: 'ms' }
 },
@@ -341,7 +341,7 @@ type: 'column',
 color: '#FF0000',
 name: 'KO',
 data: [
-  0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0
+  
 ],
 tooltip: { yDecimals: 0, ySuffix: 'ms' }
 }
@@ -353,7 +353,7 @@ responseTimeDistributionChart.setTitle({
   useHTML: true
 });
 
-var responseTimePercentiles = unpack([[1639337923,[243,243,243,243,243,243,243,243,243,243]],[1639337924,null],[1639337925,[249,249,249,249,249,249,249,249,249,249]],[1639337926,null],[1639337927,[227,227,227,227,227,227,227,227,227,227]],[1639337928,null],[1639337929,[231,231,231,231,231,231,231,231,231,231]],[1639337930,null],[1639337931,[249,249,249,249,249,249,249,249,249,249]],[1639337932,null],[1639337933,[259,259,259,259,259,259,259,259,259,259]],[1639337934,null],[1639337935,[328,328,328,328,328,328,328,328,328,328]],[1639337936,null],[1639337937,[227,227,227,227,227,227,227,227,227,227]],[1639337938,null],[1639337939,[260,260,260,260,260,260,260,260,260,260]],[1639337940,null],[1639337941,[237,237,237,237,237,237,237,237,237,237]],[1639337942,null],[1639337943,[240,240,240,240,240,240,240,240,240,240]],[1639337944,null],[1639337945,[253,253,253,253,253,253,253,253,253,253]],[1639337946,null],[1639337947,[255,255,255,255,255,255,255,255,255,255]],[1639337948,null],[1639337949,[222,222,222,222,222,222,222,222,222,222]],[1639337950,null],[1639337951,[252,252,252,252,252,252,252,252,252,252]]]);
+var responseTimePercentiles = unpack([[1639340264,[264,264,264,264,264,264,264,264,264,264]],[1639340265,[224,251,253,254,256,259,261,264,266,267]],[1639340266,[225,227,231,238,242,246,250,254,258,259]],[1639340267,[225,232,233,235,236,237,238,239,239,240]],[1639340268,[223,237,249,257,259,267,276,285,292,294]],[1639340269,[254,255,255,256,256,257,258,259,259,260]],[1639340270,[225,242,250,254,255,256,257,258,259,260]],[1639340271,[226,243,254,263,266,267,269,271,272,273]],[1639340272,[252,252,258,259,261,264,267,270,272,273]],[1639340273,[221,235,245,250,251,251,252,252,252,253]],[1639340274,[219,248,254,258,258,259,260,261,261,262]],[1639340275,[240,252,253,254,255,259,264,269,273,274]],[1639340276,[239,244,247,249,249,249,249,249,249,250]],[1639340277,[222,230,243,257,259,259,259,259,259,260]],[1639340278,[222,241,257,260,265,270,275,280,284,286]],[1639340279,[236,244,253,260,260,260,260,260,260,260]],[1639340280,[228,230,260,266,266,267,267,268,268,269]],[1639340281,[227,244,250,252,253,259,266,272,277,279]],[1639340282,[254,257,261,264,264,264,264,264,264,265]],[1639340283,[218,234,240,248,251,254,258,261,264,265]],[1639340284,[221,231,241,260,260,260,260,260,260,261]],[1639340285,[231,245,250,250,250,250,250,250,250,251]],[1639340286,[225,228,238,255,256,257,258,259,259,260]],[1639340287,[225,243,255,256,256,256,257,257,257,258]],[1639340288,[230,230,235,243,246,248,251,254,256,257]],[1639340289,[221,226,232,238,240,245,250,255,259,261]],[1639340290,[249,250,251,257,258,259,260,261,261,262]],[1639340291,[225,234,239,247,252,256,261,265,269,270]],[1639340292,[244,248,255,256,256,256,256,256,256,257]],[1639340293,[225,234,241,250,252,253,254,255,255,256]],[1639340294,[226,226,227,240,243,245,248,251,253,254]],[1639340295,null],[1639340296,null],[1639340297,null],[1639340298,null]]);
 
 var responseTimeChart = new Highcharts.StockChart({
   chart: {
@@ -548,7 +548,7 @@ responseTimeChart.setTitle({
   useHTML: true
 });
 
-var container_requests = unpack([[1639337923,[1,0, 1]],[1639337924,[0,0, 0]],[1639337925,[1,0, 1]],[1639337926,[0,0, 0]],[1639337927,[1,0, 1]],[1639337928,[0,0, 0]],[1639337929,[1,0, 1]],[1639337930,[0,0, 0]],[1639337931,[1,0, 1]],[1639337932,[0,0, 0]],[1639337933,[1,0, 1]],[1639337934,[0,0, 0]],[1639337935,[1,0, 1]],[1639337936,[0,0, 0]],[1639337937,[1,0, 1]],[1639337938,[0,0, 0]],[1639337939,[1,0, 1]],[1639337940,[0,0, 0]],[1639337941,[1,0, 1]],[1639337942,[0,0, 0]],[1639337943,[1,0, 1]],[1639337944,[0,0, 0]],[1639337945,[1,0, 1]],[1639337946,[0,0, 0]],[1639337947,[1,0, 1]],[1639337948,[0,0, 0]],[1639337949,[1,0, 1]],[1639337950,[0,0, 0]],[1639337951,[1,0, 1]]]);
+var container_requests = unpack([[1639340264,[1,0, 1]],[1639340265,[5,0, 5]],[1639340266,[5,0, 5]],[1639340267,[5,0, 5]],[1639340268,[6,0, 6]],[1639340269,[5,0, 5]],[1639340270,[4,0, 4]],[1639340271,[6,0, 6]],[1639340272,[5,0, 5]],[1639340273,[4,0, 4]],[1639340274,[5,0, 5]],[1639340275,[6,0, 6]],[1639340276,[4,0, 4]],[1639340277,[6,0, 6]],[1639340278,[5,0, 5]],[1639340279,[4,0, 4]],[1639340280,[5,0, 5]],[1639340281,[6,0, 6]],[1639340282,[4,0, 4]],[1639340283,[6,0, 6]],[1639340284,[5,0, 5]],[1639340285,[5,0, 5]],[1639340286,[5,0, 5]],[1639340287,[5,0, 5]],[1639340288,[4,0, 4]],[1639340289,[6,0, 6]],[1639340290,[5,0, 5]],[1639340291,[4,0, 4]],[1639340292,[5,0, 5]],[1639340293,[6,0, 6]],[1639340294,[3,0, 3]],[1639340295,[0,0, 0]],[1639340296,[0,0, 0]],[1639340297,[0,0, 0]],[1639340298,[0,0, 0]]]);
 
 var requestsChart = new Highcharts.StockChart({
   chart: {
@@ -657,7 +657,7 @@ requestsChart.setTitle({
   useHTML: true
 });
 
-var container_responses = unpack([[1639337923,[0,0, 0]],[1639337924,[1,0, 1]],[1639337925,[0,0, 0]],[1639337926,[1,0, 1]],[1639337927,[0,0, 0]],[1639337928,[1,0, 1]],[1639337929,[0,0, 0]],[1639337930,[1,0, 1]],[1639337931,[0,0, 0]],[1639337932,[1,0, 1]],[1639337933,[0,0, 0]],[1639337934,[1,0, 1]],[1639337935,[0,0, 0]],[1639337936,[1,0, 1]],[1639337937,[0,0, 0]],[1639337938,[1,0, 1]],[1639337939,[0,0, 0]],[1639337940,[1,0, 1]],[1639337941,[0,0, 0]],[1639337942,[1,0, 1]],[1639337943,[0,0, 0]],[1639337944,[1,0, 1]],[1639337945,[0,0, 0]],[1639337946,[1,0, 1]],[1639337947,[0,0, 0]],[1639337948,[1,0, 1]],[1639337949,[0,0, 0]],[1639337950,[1,0, 1]],[1639337951,[1,0, 1]]]);
+var container_responses = unpack([[1639340264,[0,0, 0]],[1639340265,[5,0, 5]],[1639340266,[5,0, 5]],[1639340267,[5,0, 5]],[1639340268,[5,0, 5]],[1639340269,[5,0, 5]],[1639340270,[5,0, 5]],[1639340271,[5,0, 5]],[1639340272,[5,0, 5]],[1639340273,[5,0, 5]],[1639340274,[5,0, 5]],[1639340275,[5,0, 5]],[1639340276,[5,0, 5]],[1639340277,[5,0, 5]],[1639340278,[5,0, 5]],[1639340279,[5,0, 5]],[1639340280,[4,0, 4]],[1639340281,[6,0, 6]],[1639340282,[5,0, 5]],[1639340283,[5,0, 5]],[1639340284,[5,0, 5]],[1639340285,[5,0, 5]],[1639340286,[5,0, 5]],[1639340287,[5,0, 5]],[1639340288,[5,0, 5]],[1639340289,[5,0, 5]],[1639340290,[5,0, 5]],[1639340291,[5,0, 5]],[1639340292,[5,0, 5]],[1639340293,[5,0, 5]],[1639340294,[5,0, 5]],[1639340295,[0,0, 0]],[1639340296,[0,0, 0]],[1639340297,[0,0, 0]],[1639340298,[0,0, 0]]]);
 
 var requestsChart = new Highcharts.StockChart({
   chart: {
@@ -775,7 +775,7 @@ tooltip: { yDecimals: 0, ySuffix: '', valueDecimals: 0 }
 type: 'pie',
 name: 'Distribution',
 data: [
-  {name: 'OK', y: 15.0, color: '#A0B228'},{name: 'KO', y: 0.0, color: '#FF0000'}
+  {name: 'OK', y: 150.0, color: '#A0B228'},{name: 'KO', y: 0.0, color: '#FF0000'}
 ],
 center: [775, -40],
 size: 70,
@@ -860,7 +860,7 @@ type: 'scatter',
 color: 'rgba(69, 114, 167, .2)',
 name: 'OK',
 data: [
-[7,243],[7,249],[7,227],[7,231],[7,249],[7,259],[7,328],[7,227],[7,260],[7,237],[7,240],[7,253],[7,255],[7,222],[7,252]
+[15,264],[17,251],[31,261],[32,252],[32,280],[32,268],[32,254],[32,256],[33,254],[33,285],[33,259],[33,258],[33,270],[33,269],[33,264],[33,261],[33,260],[33,250],[33,259],[34,264],[34,271],[34,261],[34,249],[34,259],[34,272],[34,257],[34,265],[35,239],[35,260],[35,255],[36,255]
 ]},
 	  {
 type: 'scatter',
