--- a/Lab_6/usersimulation-20211212201743270/req_delete-post-2e304.html
+++ b/Lab_6/usersimulation-20211212201743270/req_delete-post-2e304.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="js/highcharts-more.js"></script>
 <script type="text/javascript" src="js/theme.js"></script>
 <script type="text/javascript" src="js/unpack.js"></script>
-<title>Gatling Stats - Put Post</title>
+<title>Gatling Stats - Delete Post</title>
 </head>
 <body>
 <div class="frise"></div>
@@ -37,15 +37,15 @@
                         <div class="item "><a href="index.html">GLOBAL</a></div>
                         <div class="item ouvert"><a id="details_link" href="#">DETAILS</a></div>
                         <script type="text/javascript">
-                          var timestamp = 1639337922554;
+                          var timestamp = 1639340263270;
                           var runStartHumanDate = moment(timestamp).format("YYYY-MM-DD HH:mm:ss Z");
-                          document.writeln("<p class='sim_desc' title='"+ runStartHumanDate +", duration : 29 seconds' data-content='Tests'>");
-                          document.writeln("<b>" + runStartHumanDate + ", duration : 29 seconds Tests</b>");
+                          document.writeln("<p class='sim_desc' title='"+ runStartHumanDate +", duration : 34 seconds' data-content=''>");
+                          document.writeln("<b>" + runStartHumanDate + ", duration : 34 seconds </b>");
                           document.writeln("</p>");
                         </script>
                     </div>
                     <div class="content-in">
-                        <h1><span>> </span>Put Post</h1>
+                        <h1><span>> </span>Delete Post</h1>
                         <div class="article">
                             
                         <div class="infos">
@@ -174,7 +174,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    var pageStats = stats.contents['req_put-post-f3d99'].stats;
+    var pageStats = stats.contents['req_delete-post-2e304'].stats;
     $(document).ready(function() {
         $('.sim_desc').popover({trigger:'hover', placement:'bottom'});
         setDetailsLinkUrl();
@@ -303,7 +303,7 @@ var responseTimeDistributionChart = new Highcharts.Chart({
     text: 'A title to let highcharts reserve the place for the title set later'
   },
   xAxis: {
-    categories: ['222', '224', '229', '237', '244', '247', '249', '251', '257', '258', '261', '263', '299'],
+    categories: ['217', '218', '219', '220', '221', '222', '223', '224', '225', '226', '227', '228', '229', '230', '231', '232', '233', '234', '235', '236', '237', '238', '239', '240', '241', '242', '243', '244', '245', '246', '247', '248', '249', '250', '251', '252', '253', '254', '255', '256', '257', '258', '259', '260', '261', '262', '263', '264', '265', '266', '268', '269', '270', '271', '272', '273', '274', '275', '276', '277', '278', '279', '280', '281', '282', '283', '284', '285', '286', '287', '288', '289', '290', '291', '292', '293', '294', '295', '296', '297', '298', '299', '300', '301', '302', '303', '304', '305', '306', '307', '308', '309', '310', '311', '312', '313', '314', '315', '316', '317'],
     tickInterval: 20
   },
   yAxis: {
@@ -332,7 +332,7 @@ type: 'column',
 color: '#4572A7',
 name: 'OK',
 data: [
-  6.66,6.66,13.33,13.33,6.66,6.66,6.66,6.66,6.66,6.66,6.66,6.66,6.66
+  1.33,0.0,0.66,0.0,2.0,2.66,0.66,2.0,2.66,2.0,4.66,2.66,0.0,0.66,0.66,4.0,2.0,2.0,1.33,2.0,2.0,1.33,0.66,2.0,2.66,2.66,0.0,1.33,0.0,1.33,0.66,0.66,3.33,6.0,6.0,4.0,3.33,2.0,2.0,0.66,4.0,3.33,1.33,2.66,0.66,0.66,0.0,0.66,2.0,0.66,1.33,0.0,0.66,0.66,0.66,0.66,0.0,0.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.66,0.0,0.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.66
 ],
 tooltip: { yDecimals: 0, ySuffix: 'ms' }
 },
@@ -341,7 +341,7 @@ type: 'column',
 color: '#FF0000',
 name: 'KO',
 data: [
-  
+  0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0
 ],
 tooltip: { yDecimals: 0, ySuffix: 'ms' }
 }
@@ -353,7 +353,7 @@ responseTimeDistributionChart.setTitle({
   useHTML: true
 });
 
-var responseTimePercentiles = unpack([[1639337923,[257,257,257,257,257,257,257,257,257,257]],[1639337924,null],[1639337925,[229,229,229,229,229,229,229,229,229,229]],[1639337926,null],[1639337927,[229,229,229,229,229,229,229,229,229,229]],[1639337928,null],[1639337929,[251,251,251,251,251,251,251,251,251,251]],[1639337930,null],[1639337931,[263,263,263,263,263,263,263,263,263,263]],[1639337932,null],[1639337933,[261,261,261,261,261,261,261,261,261,261]],[1639337934,null],[1639337935,[237,237,237,237,237,237,237,237,237,237]],[1639337936,null],[1639337937,[247,247,247,247,247,247,247,247,247,247]],[1639337938,null],[1639337939,[222,222,222,222,222,222,222,222,222,222]],[1639337940,null],[1639337941,[244,244,244,244,244,244,244,244,244,244]],[1639337942,null],[1639337943,[299,299,299,299,299,299,299,299,299,299]],[1639337944,null],[1639337945,[224,224,224,224,224,224,224,224,224,224]],[1639337946,null],[1639337947,[237,237,237,237,237,237,237,237,237,237]],[1639337948,null],[1639337949,[258,258,258,258,258,258,258,258,258,258]],[1639337950,null],[1639337951,[249,249,249,249,249,249,249,249,249,249]]]);
+var responseTimePercentiles = unpack([[1639340264,[222,222,222,222,222,222,222,222,222,222]],[1639340265,[226,227,241,250,251,251,252,253,253,254]],[1639340266,[238,238,244,251,253,255,256,258,259,260]],[1639340267,[246,252,254,262,265,270,276,281,285,287]],[1639340268,[219,234,250,251,252,254,255,257,258,259]],[1639340269,[248,249,251,253,254,255,256,257,257,258]],[1639340270,[224,232,256,257,257,258,258,259,259,260]],[1639340271,[222,238,242,252,252,252,252,252,252,253]],[1639340272,[223,229,246,253,254,255,257,258,259,260]],[1639340273,[253,256,261,265,265,266,266,267,267,268]],[1639340274,[224,227,247,251,252,253,254,255,256,257]],[1639340275,[227,235,240,251,253,255,257,259,260,261]],[1639340276,[249,254,262,265,266,273,280,287,293,295]],[1639340277,[222,249,249,250,254,258,262,266,270,271]],[1639340278,[227,232,237,242,244,245,247,248,249,250]],[1639340279,[225,226,236,241,242,244,246,248,250,251]],[1639340280,[216,232,237,244,245,246,248,249,250,251]],[1639340281,[222,250,251,254,257,261,264,268,271,272]],[1639340282,[237,241,253,257,260,263,266,269,272,273]],[1639340283,[224,230,253,285,292,298,305,311,316,318]],[1639340284,[227,233,250,257,259,261,263,265,267,268]],[1639340285,[221,232,245,256,256,257,257,258,258,259]],[1639340286,[231,234,238,244,246,247,248,249,250,251]],[1639340287,[236,240,250,255,255,255,256,256,256,257]],[1639340288,[217,242,242,251,252,253,255,256,257,258]],[1639340289,[221,226,244,257,258,264,271,278,283,285]],[1639340290,[227,227,244,264,265,266,267,268,269,270]],[1639340291,[221,228,230,250,251,253,254,256,257,258]],[1639340292,[227,228,233,250,253,256,259,262,264,265]],[1639340293,[225,228,228,232,236,240,244,248,251,252]],[1639340294,[235,236,240,246,247,248,249,250,251,252]],[1639340295,null],[1639340296,null],[1639340297,null],[1639340298,null]]);
 
 var responseTimeChart = new Highcharts.StockChart({
   chart: {
@@ -548,7 +548,7 @@ responseTimeChart.setTitle({
   useHTML: true
 });
 
-var container_requests = unpack([[1639337923,[1,0, 1]],[1639337924,[0,0, 0]],[1639337925,[1,0, 1]],[1639337926,[0,0, 0]],[1639337927,[1,0, 1]],[1639337928,[0,0, 0]],[1639337929,[1,0, 1]],[1639337930,[0,0, 0]],[1639337931,[1,0, 1]],[1639337932,[0,0, 0]],[1639337933,[1,0, 1]],[1639337934,[0,0, 0]],[1639337935,[1,0, 1]],[1639337936,[0,0, 0]],[1639337937,[1,0, 1]],[1639337938,[0,0, 0]],[1639337939,[1,0, 1]],[1639337940,[0,0, 0]],[1639337941,[1,0, 1]],[1639337942,[0,0, 0]],[1639337943,[1,0, 1]],[1639337944,[0,0, 0]],[1639337945,[1,0, 1]],[1639337946,[0,0, 0]],[1639337947,[1,0, 1]],[1639337948,[0,0, 0]],[1639337949,[1,0, 1]],[1639337950,[0,0, 0]],[1639337951,[1,0, 1]]]);
+var container_requests = unpack([[1639340264,[1,0, 1]],[1639340265,[6,0, 6]],[1639340266,[4,0, 4]],[1639340267,[6,0, 6]],[1639340268,[5,0, 5]],[1639340269,[4,0, 4]],[1639340270,[5,0, 5]],[1639340271,[5,0, 5]],[1639340272,[6,0, 6]],[1639340273,[4,0, 4]],[1639340274,[5,0, 5]],[1639340275,[5,0, 5]],[1639340276,[6,0, 6]],[1639340277,[5,0, 5]],[1639340278,[4,0, 4]],[1639340279,[6,0, 6]],[1639340280,[5,0, 5]],[1639340281,[5,0, 5]],[1639340282,[5,0, 5]],[1639340283,[4,0, 4]],[1639340284,[5,0, 5]],[1639340285,[4,0, 4]],[1639340286,[6,0, 6]],[1639340287,[5,0, 5]],[1639340288,[5,0, 5]],[1639340289,[6,0, 6]],[1639340290,[4,0, 4]],[1639340291,[5,0, 5]],[1639340292,[5,0, 5]],[1639340293,[5,0, 5]],[1639340294,[4,0, 4]],[1639340295,[0,0, 0]],[1639340296,[0,0, 0]],[1639340297,[0,0, 0]],[1639340298,[0,0, 0]]]);
 
 var requestsChart = new Highcharts.StockChart({
   chart: {
@@ -657,7 +657,7 @@ requestsChart.setTitle({
   useHTML: true
 });
 
-var container_responses = unpack([[1639337923,[0,0, 0]],[1639337924,[1,0, 1]],[1639337925,[0,0, 0]],[1639337926,[1,0, 1]],[1639337927,[0,0, 0]],[1639337928,[1,0, 1]],[1639337929,[0,0, 0]],[1639337930,[1,0, 1]],[1639337931,[0,0, 0]],[1639337932,[1,0, 1]],[1639337933,[0,0, 0]],[1639337934,[1,0, 1]],[1639337935,[0,0, 0]],[1639337936,[1,0, 1]],[1639337937,[0,0, 0]],[1639337938,[1,0, 1]],[1639337939,[0,0, 0]],[1639337940,[1,0, 1]],[1639337941,[0,0, 0]],[1639337942,[1,0, 1]],[1639337943,[0,0, 0]],[1639337944,[1,0, 1]],[1639337945,[0,0, 0]],[1639337946,[1,0, 1]],[1639337947,[0,0, 0]],[1639337948,[1,0, 1]],[1639337949,[0,0, 0]],[1639337950,[1,0, 1]],[1639337951,[1,0, 1]]]);
+var container_responses = unpack([[1639340264,[0,0, 0]],[1639340265,[5,0, 5]],[1639340266,[5,0, 5]],[1639340267,[5,0, 5]],[1639340268,[5,0, 5]],[1639340269,[5,0, 5]],[1639340270,[5,0, 5]],[1639340271,[5,0, 5]],[1639340272,[5,0, 5]],[1639340273,[5,0, 5]],[1639340274,[5,0, 5]],[1639340275,[5,0, 5]],[1639340276,[5,0, 5]],[1639340277,[5,0, 5]],[1639340278,[5,0, 5]],[1639340279,[5,0, 5]],[1639340280,[5,0, 5]],[1639340281,[5,0, 5]],[1639340282,[5,0, 5]],[1639340283,[5,0, 5]],[1639340284,[5,0, 5]],[1639340285,[4,0, 4]],[1639340286,[6,0, 6]],[1639340287,[5,0, 5]],[1639340288,[5,0, 5]],[1639340289,[5,0, 5]],[1639340290,[5,0, 5]],[1639340291,[5,0, 5]],[1639340292,[5,0, 5]],[1639340293,[5,0, 5]],[1639340294,[5,0, 5]],[1639340295,[0,0, 0]],[1639340296,[0,0, 0]],[1639340297,[0,0, 0]],[1639340298,[0,0, 0]]]);
 
 var requestsChart = new Highcharts.StockChart({
   chart: {
@@ -775,7 +775,7 @@ tooltip: { yDecimals: 0, ySuffix: '', valueDecimals: 0 }
 type: 'pie',
 name: 'Distribution',
 data: [
-  {name: 'OK', y: 15.0, color: '#A0B228'},{name: 'KO', y: 0.0, color: '#FF0000'}
+  {name: 'OK', y: 150.0, color: '#A0B228'},{name: 'KO', y: 0.0, color: '#FF0000'}
 ],
 center: [775, -40],
 size: 70,
@@ -860,7 +860,7 @@ type: 'scatter',
 color: 'rgba(69, 114, 167, .2)',
 name: 'OK',
 data: [
-[7,257],[7,229],[7,229],[7,251],[7,263],[7,261],[7,237],[7,247],[7,222],[7,244],[7,299],[7,224],[7,237],[7,258],[7,249]
+[15,222],[17,250],[31,268],[32,267],[32,248],[32,249],[32,256],[32,262],[33,258],[33,257],[33,257],[33,259],[33,258],[33,259],[33,269],[33,311],[33,265],[33,258],[33,249],[34,253],[34,252],[34,255],[34,287],[34,266],[34,268],[34,256],[34,256],[35,281],[35,248],[35,248],[36,278]
 ]},
 	  {
 type: 'scatter',
