--- a/Lab_6/usersimulation-20211212201743270/req_get-post-b22d0.html
+++ b/Lab_6/usersimulation-20211212201743270/req_get-post-b22d0.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="js/highcharts-more.js"></script>
 <script type="text/javascript" src="js/theme.js"></script>
 <script type="text/javascript" src="js/unpack.js"></script>
-<title>Gatling Stats - Post new Post</title>
+<title>Gatling Stats - Get Post</title>
 </head>
 <body>
 <div class="frise"></div>
@@ -37,15 +37,15 @@
                         <div class="item "><a href="index.html">GLOBAL</a></div>
                         <div class="item ouvert"><a id="details_link" href="#">DETAILS</a></div>
                         <script type="text/javascript">
-                          var timestamp = 1639337922554;
+                          var timestamp = 1639340263270;
                           var runStartHumanDate = moment(timestamp).format("YYYY-MM-DD HH:mm:ss Z");
-                          document.writeln("<p class='sim_desc' title='"+ runStartHumanDate +", duration : 29 seconds' data-content='Tests'>");
-                          document.writeln("<b>" + runStartHumanDate + ", duration : 29 seconds Tests</b>");
+                          document.writeln("<p class='sim_desc' title='"+ runStartHumanDate +", duration : 34 seconds' data-content=''>");
+                          document.writeln("<b>" + runStartHumanDate + ", duration : 34 seconds </b>");
                           document.writeln("</p>");
                         </script>
                     </div>
                     <div class="content-in">
-                        <h1><span>> </span>Post new Post</h1>
+                        <h1><span>> </span>Get Post</h1>
                         <div class="article">
                             
                         <div class="infos">
@@ -174,7 +174,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    var pageStats = stats.contents['req_post-new-post-e7f4c'].stats;
+    var pageStats = stats.contents['req_get-post-b22d0'].stats;
     $(document).ready(function() {
         $('.sim_desc').popover({trigger:'hover', placement:'bottom'});
         setDetailsLinkUrl();
@@ -303,7 +303,7 @@ var responseTimeDistributionChart = new Highcharts.Chart({
     text: 'A title to let highcharts reserve the place for the title set later'
   },
   xAxis: {
-    categories: ['257', '258', '259', '260', '262', '263', '264', '265', '266', '268', '269', '270', '271', '273', '274', '275', '276', '278', '279', '280', '281', '282', '284', '285', '286', '287', '289', '290', '291', '292', '294', '295', '296', '297', '298', '300', '301', '302', '303', '305', '306', '307', '308', '310', '311', '312', '313', '314', '316', '317', '318', '319', '321', '322', '323', '324', '325', '327', '328', '329', '330', '332', '333', '334', '335', '337', '338', '339', '340', '341', '343', '344', '345', '346', '348', '349', '350', '351', '353', '354', '355', '356', '357', '359', '360', '361', '362', '364', '365', '366', '367', '369', '370', '371', '372', '373', '375', '376', '377', '378'],
+    categories: ['8', '9', '10', '12', '13', '14', '15', '17', '18', '19', '21', '22', '23', '24', '26', '27', '28', '30', '31', '32', '33', '35', '36', '37', '39', '40', '41', '42', '44', '45', '46', '48', '49', '50', '52', '53', '54', '55', '57', '58', '59', '61', '62', '63', '64', '66', '67', '68', '70', '71', '72', '73', '75', '76', '77', '79', '80', '81', '82', '84', '85', '86', '88', '89', '90', '91', '93', '94', '95', '97', '98', '99', '101', '102', '103', '104', '106', '107', '108', '110', '111', '112', '113', '115', '116', '117', '119', '120', '121', '122', '124', '125', '126', '128', '129', '130', '131', '133', '134', '135'],
     tickInterval: 20
   },
   yAxis: {
@@ -332,7 +332,7 @@ type: 'column',
 color: '#4572A7',
 name: 'OK',
 data: [
-  1.66,0.0,0.0,0.0,0.0,0.0,1.66,0.0,1.66,0.0,1.66,3.33,0.0,1.66,0.0,0.0,1.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,1.66,1.66,1.66,0.0,0.0,0.0,0.0,0.0,1.66,1.66,0.0,0.0,1.66,1.66,0.0,0.0,1.66,1.66,1.66,1.66,0.0,0.0,1.66,5.0,0.0,0.0,6.66,3.33,1.66,6.66,5.0,5.0,1.66,3.33,5.0,1.66,0.0,0.0,0.0,0.0,1.66,3.33,1.66,5.0,0.0,0.0,1.66,0.0,0.0,0.0,1.66,0.0,0.0,1.66,0.0,0.0,1.66,0.0,0.0,0.0,0.0,0.0,1.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,1.66
+  2.0,2.0,4.66,10.0,6.0,5.33,8.66,2.66,2.66,2.66,2.66,0.0,0.0,1.33,1.33,0.0,0.0,0.66,0.0,0.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,2.66,4.0,5.33,4.0,2.0,8.66,2.0,3.33,3.33,0.66,2.0,0.0,3.33,0.0,0.66,1.33,0.0,0.0,0.0,0.0,0.0,0.66,0.66,0.0,0.0,0.0,0.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.66,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.66
 ],
 tooltip: { yDecimals: 0, ySuffix: 'ms' }
 },
@@ -353,7 +353,7 @@ responseTimeDistributionChart.setTitle({
   useHTML: true
 });
 
-var responseTimePercentiles = unpack([[1639337923,[324,330,335,339,339,340,340,340,340,341]],[1639337924,null],[1639337925,[291,312,325,332,333,334,335,336,337,338]],[1639337926,null],[1639337927,[320,326,329,341,349,356,364,371,377,379]],[1639337928,null],[1639337929,[320,323,325,334,339,343,348,352,356,357]],[1639337930,null],[1639337931,[269,269,270,283,290,298,306,314,320,322]],[1639337932,null],[1639337933,[267,300,317,323,323,323,323,323,323,324]],[1639337934,null],[1639337935,[303,320,328,333,335,337,338,340,341,342]],[1639337936,null],[1639337937,[327,327,336,346,347,347,348,349,349,350]],[1639337938,null],[1639337939,[276,285,300,315,317,319,321,323,324,325]],[1639337940,null],[1639337941,[305,316,329,342,345,347,349,351,353,354]],[1639337942,null],[1639337943,[273,300,316,324,325,326,327,328,329,330]],[1639337944,null],[1639337945,[308,314,322,337,342,348,353,359,363,365]],[1639337946,null],[1639337947,[256,301,320,328,331,333,336,339,341,342]],[1639337948,null],[1639337949,[264,283,303,319,320,321,323,324,325,326]],[1639337950,null],[1639337951,[299,299,308,322,326,329,333,336,339,340]]]);
+var responseTimePercentiles = unpack([[1639340264,[19,19,19,19,19,19,19,19,19,19]],[1639340265,[16,19,45,50,50,50,50,50,50,51]],[1639340266,[13,24,54,58,58,58,59,60,60,61]],[1639340267,[11,14,16,17,20,23,26,28,31,32]],[1639340268,[14,17,19,28,34,39,44,49,53,55]],[1639340269,[10,13,15,44,54,55,57,58,59,60]],[1639340270,[16,17,21,49,49,49,49,49,49,49]],[1639340271,[15,18,48,61,67,74,80,87,92,94]],[1639340272,[12,12,14,25,31,37,43,49,53,55]],[1639340273,[12,15,45,46,47,48,49,50,50,51]],[1639340274,[7,16,39,51,52,52,52,52,52,52]],[1639340275,[12,39,51,57,60,63,66,69,71,72]],[1639340276,[12,13,49,53,53,53,53,53,53,54]],[1639340277,[9,12,15,49,49,50,50,51,51,52]],[1639340278,[12,16,45,46,46,47,48,49,49,50]],[1639340279,[12,12,13,38,46,48,50,52,54,55]],[1639340280,[13,13,15,24,28,33,38,43,47,48]],[1639340281,[8,18,46,51,52,53,54,55,56,57]],[1639340282,[11,51,51,55,57,59,61,63,64,65]],[1639340283,[19,24,26,52,54,57,59,62,64,65]],[1639340284,[12,13,18,21,29,37,45,52,59,61]],[1639340285,[11,14,15,26,33,40,47,53,59,61]],[1639340286,[11,11,13,16,17,17,18,19,19,20]],[1639340287,[9,14,31,47,48,49,50,51,52,53]],[1639340288,[10,15,35,56,57,58,60,61,62,63]],[1639340289,[10,23,54,57,58,77,97,116,132,136]],[1639340290,[14,22,36,54,59,64,68,73,77,78]],[1639340291,[10,21,48,50,51,51,52,53,53,54]],[1639340292,[8,9,31,52,52,53,53,53,53,54]],[1639340293,[10,23,46,49,50,56,62,68,72,74]],[1639340294,[9,9,10,28,32,35,39,43,46,47]],[1639340295,null],[1639340296,null],[1639340297,null],[1639340298,[49,49,49,49,49,49,49,49,49,49]]]);
 
 var responseTimeChart = new Highcharts.StockChart({
   chart: {
@@ -548,7 +548,7 @@ responseTimeChart.setTitle({
   useHTML: true
 });
 
-var container_requests = unpack([[1639337923,[4,0, 4]],[1639337924,[0,0, 0]],[1639337925,[4,0, 4]],[1639337926,[0,0, 0]],[1639337927,[4,0, 4]],[1639337928,[0,0, 0]],[1639337929,[4,0, 4]],[1639337930,[0,0, 0]],[1639337931,[4,0, 4]],[1639337932,[0,0, 0]],[1639337933,[4,0, 4]],[1639337934,[0,0, 0]],[1639337935,[4,0, 4]],[1639337936,[0,0, 0]],[1639337937,[4,0, 4]],[1639337938,[0,0, 0]],[1639337939,[4,0, 4]],[1639337940,[0,0, 0]],[1639337941,[4,0, 4]],[1639337942,[0,0, 0]],[1639337943,[4,0, 4]],[1639337944,[0,0, 0]],[1639337945,[4,0, 4]],[1639337946,[0,0, 0]],[1639337947,[4,0, 4]],[1639337948,[0,0, 0]],[1639337949,[4,0, 4]],[1639337950,[0,0, 0]],[1639337951,[4,0, 4]]]);
+var container_requests = unpack([[1639340264,[1,0, 1]],[1639340265,[5,0, 5]],[1639340266,[6,0, 6]],[1639340267,[5,0, 5]],[1639340268,[4,0, 4]],[1639340269,[6,0, 6]],[1639340270,[5,0, 5]],[1639340271,[5,0, 5]],[1639340272,[4,0, 4]],[1639340273,[5,0, 5]],[1639340274,[6,0, 6]],[1639340275,[4,0, 4]],[1639340276,[5,0, 5]],[1639340277,[5,0, 5]],[1639340278,[5,0, 5]],[1639340279,[6,0, 6]],[1639340280,[4,0, 4]],[1639340281,[5,0, 5]],[1639340282,[5,0, 5]],[1639340283,[5,0, 5]],[1639340284,[5,0, 5]],[1639340285,[5,0, 5]],[1639340286,[4,0, 4]],[1639340287,[6,0, 6]],[1639340288,[4,0, 4]],[1639340289,[6,0, 6]],[1639340290,[4,0, 4]],[1639340291,[6,0, 6]],[1639340292,[4,0, 4]],[1639340293,[6,0, 6]],[1639340294,[3,0, 3]],[1639340295,[0,0, 0]],[1639340296,[0,0, 0]],[1639340297,[0,0, 0]],[1639340298,[1,0, 1]]]);
 
 var requestsChart = new Highcharts.StockChart({
   chart: {
@@ -657,7 +657,7 @@ requestsChart.setTitle({
   useHTML: true
 });
 
-var container_responses = unpack([[1639337923,[4,0, 4]],[1639337924,[0,0, 0]],[1639337925,[4,0, 4]],[1639337926,[0,0, 0]],[1639337927,[4,0, 4]],[1639337928,[0,0, 0]],[1639337929,[4,0, 4]],[1639337930,[0,0, 0]],[1639337931,[4,0, 4]],[1639337932,[0,0, 0]],[1639337933,[4,0, 4]],[1639337934,[0,0, 0]],[1639337935,[4,0, 4]],[1639337936,[0,0, 0]],[1639337937,[4,0, 4]],[1639337938,[0,0, 0]],[1639337939,[4,0, 4]],[1639337940,[0,0, 0]],[1639337941,[4,0, 4]],[1639337942,[0,0, 0]],[1639337943,[4,0, 4]],[1639337944,[0,0, 0]],[1639337945,[4,0, 4]],[1639337946,[0,0, 0]],[1639337947,[4,0, 4]],[1639337948,[0,0, 0]],[1639337949,[4,0, 4]],[1639337950,[0,0, 0]],[1639337951,[4,0, 4]]]);
+var container_responses = unpack([[1639340264,[1,0, 1]],[1639340265,[5,0, 5]],[1639340266,[6,0, 6]],[1639340267,[5,0, 5]],[1639340268,[4,0, 4]],[1639340269,[6,0, 6]],[1639340270,[5,0, 5]],[1639340271,[5,0, 5]],[1639340272,[4,0, 4]],[1639340273,[5,0, 5]],[1639340274,[6,0, 6]],[1639340275,[4,0, 4]],[1639340276,[5,0, 5]],[1639340277,[5,0, 5]],[1639340278,[5,0, 5]],[1639340279,[6,0, 6]],[1639340280,[4,0, 4]],[1639340281,[5,0, 5]],[1639340282,[5,0, 5]],[1639340283,[5,0, 5]],[1639340284,[5,0, 5]],[1639340285,[5,0, 5]],[1639340286,[4,0, 4]],[1639340287,[6,0, 6]],[1639340288,[4,0, 4]],[1639340289,[6,0, 6]],[1639340290,[4,0, 4]],[1639340291,[6,0, 6]],[1639340292,[4,0, 4]],[1639340293,[5,0, 5]],[1639340294,[4,0, 4]],[1639340295,[0,0, 0]],[1639340296,[0,0, 0]],[1639340297,[0,0, 0]],[1639340298,[1,0, 1]]]);
 
 var requestsChart = new Highcharts.StockChart({
   chart: {
@@ -775,7 +775,7 @@ tooltip: { yDecimals: 0, ySuffix: '', valueDecimals: 0 }
 type: 'pie',
 name: 'Distribution',
 data: [
-  {name: 'OK', y: 60.0, color: '#A0B228'},{name: 'KO', y: 0.0, color: '#FF0000'}
+  {name: 'OK', y: 150.0, color: '#A0B228'},{name: 'KO', y: 0.0, color: '#FF0000'}
 ],
 center: [775, -40],
 size: 70,
@@ -860,7 +860,7 @@ type: 'scatter',
 color: 'rgba(69, 114, 167, .2)',
 name: 'OK',
 data: [
-[7,340],[7,336],[7,371],[7,352],[7,314],[7,323],[7,340],[7,349],[7,323],[7,351],[7,328],[7,359],[7,339],[7,324],[7,336]
+[1,49],[15,19],[17,43],[31,73],[32,50],[32,49],[32,43],[32,61],[32,53],[33,60],[33,49],[33,58],[33,49],[33,49],[33,69],[33,63],[33,62],[33,52],[33,53],[33,19],[34,50],[34,87],[34,52],[34,53],[34,51],[34,55],[34,51],[34,53],[35,28],[35,52],[35,68],[36,116]
 ]},
 	  {
 type: 'scatter',
